# algorithms

./: .gitignore  README.md  pyproject.toml
algorithms/: search.py  sort.py  structures.py
