[build-system]
requires = ["pip", "setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "algorithms"
authors = [{name = "Ben Ohling"}]
license = {file = "LICENSE"}
description = "A large list of common algorithms implemented in Python."
requires-python = ">=3.11"
dynamic = ["version", "readme"]

[project.optional-dependencies]
dev = ["pydata-sphinx-theme", "pytest", "sphinx"]

[tool.setuptools]
packages = ["algorithms"]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "algorithms.__init__.__version__"}
readme = {file = ["README-PYPI.rst"]}
